K8s/auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
  namespace: vasta-bank
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: YOUR_DOCKER_USERNAME/vasta-auth:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: auth
  namespace: vasta-bank
spec:
  selector:
    app: auth
  ports:
    - port: 8080
      targetPort: 8080
