K8s/eureka.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka
  namespace: vasta-bank
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eureka
  template:
    metadata:
      labels:
        app: eureka
    spec:
      containers:
        - name: eureka
          image: YOUR_DOCKER_USERNAME/vasta-eureka:latest
          ports:
            - containerPort: 8761
---
apiVersion: v1
kind: Service
metadata:
  name: eureka
  namespace: vasta-bank
spec:
  selector:
    app: eureka
  ports:
    - port: 8761
      targetPort: 8761
