K8s/kafka.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
  namespace: vasta-bank
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: kafka
          image: confluentinc/cp-kafka:7.5.3
          ports:
            - containerPort: 9092
            - containerPort: 9093
---
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: vasta-bank
spec:
  selector:
    app: kafka
  ports:
    - port: 9092
      targetPort: 9092
    - port: 9093
      targetPort: 9093
  type: ClusterIP
